# LLVM

./: .gitignore  README.md  README.md~
llvm-project/llvm/: CPackConfig.cmake  CPackSourceConfig.cmake
llvm_release_build/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  LLVMBuild.cmake  cmake_install.cmake  compile_commands.json  llvm.spec  rules.ninja
llvm_release_build/cmake/modules/: cmake_install.cmake
llvm_release_build/docs/: cmake_install.cmake
llvm_release_build/examples/: cmake_install.cmake
llvm_release_build/examples/BrainF/: cmake_install.cmake
llvm_release_build/examples/Fibonacci/: cmake_install.cmake
llvm_release_build/examples/HowToUseJIT/: cmake_install.cmake
llvm_release_build/examples/Kaleidoscope/: cmake_install.cmake
llvm_release_build/examples/ModuleMaker/: cmake_install.cmake
llvm_release_build/examples/ParallelJIT/: cmake_install.cmake
llvm_release_build/include/llvm/: cmake_install.cmake
llvm_release_build/lib/: .fuse_hidden000063ee00000001  cmake_install.cmake  libLTO.so.5
llvm_release_build/lib/Analysis/: cmake_install.cmake
llvm_release_build/lib/AsmParser/: cmake_install.cmake
llvm_release_build/lib/Bitcode/: cmake_install.cmake
llvm_release_build/lib/CodeGen/: cmake_install.cmake
llvm_release_build/lib/DebugInfo/: cmake_install.cmake
llvm_release_build/lib/Demangle/: cmake_install.cmake
llvm_release_build/lib/ExecutionEngine/: cmake_install.cmake
llvm_release_build/projects/: cmake_install.cmake
llvm_release_build/runtimes/: cmake_install.cmake
llvm_release_build/test/: cmake_install.cmake  lit.site.cfg
llvm_release_build/tools/: cmake_install.cmake
llvm_release_build/unittests/: cmake_install.cmake
llvm_release_build/yan/: .Makefile.swp  .indirect.ll.swp  Makefile  TM  TM.bc  TM.c  comp.ll  fianl.ll  final.ll  hello.c  hello.ll  hello_ob.ll  indirect.ll  inte.ll  kleetest  kleetest.bc  kleetest.c  output.ll  passlog.txt  test_load.c  test_load.ll  testbi  testgcc34  testgcc34.c  testindr.c  tm.ll  tobecalled.c  tobecalled.ll  tobecalled_ob.ll  turinglog.txt  white_list.txt
llvm_release_build/yan/source_programs/oftpd-0.3.5/: AUTHORS  BUGS  ChangeLog  FAQ  Makefile.am  Makefile.in  NEWS  README  acconfig.h  configure  configure.in
llvm_release_build/yan/source_programs/oftpd-0.3.5/man/: Makefile.in  oftpd.8
llvm_release_build/yan/source_programs/oftpd-0.3.5/src/: Makefile.in  config.h.in  daemon_assert.c  error.c  file_list.c  ftp_command.c  ftp_listener.c  ftp_listener.h  ftp_session.c  ftp_session.h  oftpd.c  telnet_session.c
mo/: ReadMe.txt
mo/Turing/: .~lock.Eva_Stat.ods#  Eva_Stat.ods  TM  TM.c  add.txt  hello  hello.c  makefile  opcode.c  source_input.c  tm_input.txt  turinglog.txt
mo/Turing/babel-eval/cv/oftpd/all_50/: BUGS  Makefile.am  Makefile.in  NEWS  configure.in  mkinstalldirs
mo/Turing/babel-eval/cv/oftpd/all_50/init/: oftpd.redhat7
mo/Turing/babel-eval/cv/oftpd/all_50/man/: Makefile.am
mo/Turing/babel-eval/cv/oftpd/all_50/src/: Makefile.in  error.c  file_list.c  file_list.h  ftp_command.c  ftp_listener.c  oftpd.c  preprocess.sh  watchdog.c  watchdog.h
thesis/: Biblio-Database.bib  Biblio-Database.bib~  YanWang-Dissertation.aux  YanWang-Dissertation.bbl  YanWang-Dissertation.blg  YanWang-Dissertation.tex  YanWang-Dissertation.tex~  YanWang-Dissertation.toc  YanWang-thesis.aux  YanWang-thesis.lof  YanWang-thesis.lot  YanWang-thesis.tex  YanWang-thesis.toc  YourName-Dissertation.bbl  cg.eps  main_backup.tex  psuthesis.cls  psuthesis.cls~
thesis/Appendix-A/: Appendix-A.aux  Appendix-A.tex
thesis/Appendix-B/: Appendix-B.aux  Appendix-B.tex
thesis/Appendix-C/: Appendix-C.aux  Appendix-C.tex
thesis/Appendix-D/: Appendix-D.aux  Appendix-D.tex
thesis/Appendix-E/: Appendix-E.tex
thesis/Chapter-1/: Chapter-1.aux  Chapter-1.blg  Chapter-1.tex  Chapter-1.tex~
thesis/Chapter-2/: Chapter-2.aux  Chapter-2.tex
thesis/Chapter-3/: Chapter-3.aux  Chapter-3.tex
thesis/Chapter-4/: Chapter-4.aux  Chapter-4.tex
thesis/Chapter-5/: Chapter-5.aux  Chapter-5.tex
thesis/Chapter-6/: Chapter-6.aux  Chapter-6.tex  Chapter-6.tex~
thesis/Chapter-7/: Chapter-7.aux  Chapter-7.tex  Chapter-7.tex~
thesis/SupplementaryMaterial/: Abstract.tex  ListOfSymbols.tex
thesis/auto/: Biblio-Database.el  YanWang-Dissertation.el  psuthesis.el
thesis/eqlist/: eqlist.sty
thesis/eqparbox/: README
(+729 files in other folders)
