dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/file_list.c)
AM_INIT_AUTOMAKE(oftpd, 0.3.5)
AM_CONFIG_HEADER(src/config.h)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for libraries.
dnl Replace `main' with a function in -lpthread:
dnl AC_CHECK_LIB(pthread, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h limits.h sys/time.h syslog.h unistd.h sys/types.h)

dnl Check for ss_family
AC_EGREP_CPP(__ss_family,
[#include<sys/socket.h>
],,AC_DEFINE(HAVE_NEW_SS_FAMILY))

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_STRUCT_ST_BLOCKS
AC_STRUCT_ST_RDEV
AC_HEADER_STAT
AC_HEADER_TIME
AC_STRUCT_ST_BLOCKS
AC_STRUCT_ST_RDEV
AC_STRUCT_TM

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_FUNC_STRFTIME
AC_CHECK_FUNCS(getcwd gettimeofday select socket strerror localtime_r)
dnl AC_CHECK_LIB(pthread, pthread_create)
AC_SEARCH_LIBS(pthread_create, [ pthread pthreads thread threads ])
AC_SEARCH_LIBS(socket, socket)
AC_SEARCH_LIBS(inet_ntoa, nsl)
AC_CHECK_FUNCS(inet_aton)
AC_TRY_LINK([
#include <sys/types.h>
#include <unistd.h>
], [
off_t offset;
sendfile(0, 1, &offset);
], 
AC_DEFINE(HAVE_LINUX_SENDFILE))

dnl Add reentrant flag.
CFLAGS="$CFLAGS -D_REENTRANT -D_THREAD_SAFE"

dnl Check whether to enable IPv6 support
AC_ARG_ENABLE([ipv6],[  --enable-ipv6           Enable IPv6 support (disabled by default)],
              CFLAGS="$CFLAGS -DINET6",)

AC_SUBST(HAVE_NEW_SS_FAMILY)
AC_OUTPUT(Makefile src/Makefile man/Makefile)
dnl AM_CONFIG_HEADER(src/config.h)
